GTK3: Fix wrong color definition

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -619,7 +619,7 @@ GtkComboBox {
         color: #FFFFFF; }
         .titlebar.selection-mode .button:checked:insensitive,
         .header-bar.selection-mode .button:checked:insensitive {
-          color: rgba(0, 0, 0, 0.32); }
+          color: rgba(255, 255, 255, 0.4); }
           .titlebar.selection-mode .button:checked:insensitive > .label,
           .header-bar.selection-mode .button:checked:insensitive > .label {
             color: inherit; }
@@ -1721,7 +1721,7 @@ GtkScrolledWindow GtkViewport.frame {
     animation: list_ripple_effect 0.2s cubic-bezier(0.4, 0, 0.2, 1) forwards; }
 
 .list-row:selected .button:insensitive {
-  color: rgba(0, 0, 0, 0.24); }
+  color: rgba(255, 255, 255, 0.3); }
 .list-row:selected .button.flat, .list-row:selected .inline-toolbar .button, .inline-toolbar .list-row:selected .button, .list-row:selected .osd .toolbar .button, .osd .toolbar .list-row:selected .button, .list-row:selected .toolbar.osd .button, .toolbar.osd .list-row:selected .button, .list-row:selected .app-notification .button, .app-notification .list-row:selected .button, .list-row:selected .titlebar .button:not(.suggested-action):not(.destructive-action), .titlebar .list-row:selected .button:not(.suggested-action):not(.destructive-action),
 .list-row:selected .header-bar .button:not(.suggested-action):not(.destructive-action),
 .header-bar .list-row:selected .button:not(.suggested-action):not(.destructive-action), .list-row:selected .message-dialog.csd .dialog-action-area .button, .message-dialog.csd .dialog-action-area .list-row:selected .button, .list-row:selected .sidebar-button.button {
@@ -1735,7 +1735,7 @@ GtkScrolledWindow GtkViewport.frame {
   .list-row:selected .button.flat:insensitive, .list-row:selected .inline-toolbar .button:insensitive, .inline-toolbar .list-row:selected .button:insensitive, .list-row:selected .osd .toolbar .button:insensitive, .osd .toolbar .list-row:selected .button:insensitive, .list-row:selected .toolbar.osd .button:insensitive, .toolbar.osd .list-row:selected .button:insensitive, .list-row:selected .app-notification .button:insensitive, .app-notification .list-row:selected .button:insensitive, .list-row:selected .titlebar .button:insensitive:not(.suggested-action):not(.destructive-action), .titlebar .list-row:selected .button:insensitive:not(.suggested-action):not(.destructive-action),
   .list-row:selected .header-bar .button:insensitive:not(.suggested-action):not(.destructive-action),
   .header-bar .list-row:selected .button:insensitive:not(.suggested-action):not(.destructive-action), .list-row:selected .message-dialog.csd .dialog-action-area .button:insensitive, .message-dialog.csd .dialog-action-area .list-row:selected .button:insensitive, .list-row:selected .sidebar-button.button:insensitive {
-    color: rgba(0, 0, 0, 0.24); }
+    color: rgba(255, 255, 255, 0.3); }
 
 .list-row:hover {
   transition-duration: 0; }
@@ -1900,7 +1900,7 @@ GtkInfoBar {
   .question .button:insensitive,
   .warning .button:insensitive,
   .error .button:insensitive {
-    color: rgba(0, 0, 0, 0.24); }
+    color: rgba(255, 255, 255, 0.3); }
   .info .button.flat, .info .inline-toolbar .button, .inline-toolbar .info .button, .info .osd .toolbar .button, .osd .toolbar .info .button, .info .toolbar.osd .button, .toolbar.osd .info .button, .info .app-notification .button, .app-notification .info .button, .info .titlebar .button:not(.suggested-action):not(.destructive-action), .titlebar .info .button:not(.suggested-action):not(.destructive-action),
   .info .header-bar .button:not(.suggested-action):not(.destructive-action),
   .header-bar .info .button:not(.suggested-action):not(.destructive-action), .info .message-dialog.csd .dialog-action-area .button, .message-dialog.csd .dialog-action-area .info .button, .info .sidebar-button.button,
@@ -2106,7 +2106,7 @@ GtkInfoBar {
     .error .message-dialog.csd .dialog-action-area .button:insensitive,
     .message-dialog.csd .dialog-action-area .error .button:insensitive,
     .error .sidebar-button.button:insensitive {
-      color: rgba(0, 0, 0, 0.24); }
+      color: rgba(255, 255, 255, 0.3); }
 
 /************
  * Tooltips *
@@ -2237,7 +2237,7 @@ GtkColorSwatch {
   color: #FFFFFF; }
   .view:insensitive:selected, GtkCalendar:insensitive:selected, .label:insensitive:selected, .grid-child:insensitive:selected, .entry:insensitive:selected, .menuitem.button.flat:insensitive:selected, .inline-toolbar .menuitem.button:insensitive:selected, .osd .toolbar .menuitem.button:insensitive:selected, .toolbar.osd .menuitem.button:insensitive:selected, .app-notification .menuitem.button:insensitive:selected, .titlebar .menuitem.button:insensitive:selected:not(.suggested-action):not(.destructive-action),
   .header-bar .menuitem.button:insensitive:selected:not(.suggested-action):not(.destructive-action), .message-dialog.csd .dialog-action-area .menuitem.button:insensitive:selected, .menuitem.sidebar-button.button:insensitive:selected, .list-row:insensitive:selected, .sidebar:insensitive:selected, GtkPlacesSidebar.sidebar .list-row:selected:insensitive .label {
-    color: rgba(0, 0, 0, 0.32); }
+    color: rgba(255, 255, 255, 0.4); }
 
 .monospace {
   font: Monospace; }
